🔥 Feature: Initial implementation of Auto MCP core infrastructure
Add foundational components for Model Context Protocol server generation:
- Command-line interface in cmd/ for OpenAPI specification processing
- Internal implementation with transport layer, auth handlers, and schema parsing
- Support for SSE and HTTP transports with configurable timeouts
- OpenAPI v3 schema validation and transformation to MCP endpoints

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,7 @@ logs/
 swagger.json
 swagger.yaml
 dist/
+
+# Examples
+!examples/petshop/config/adjustments.yaml
+!examples/petshop/config/swagger.json
