🔧 Update: Include go.mod and go.sum in Auto MCP tests workflow paths

--- a/.github/workflows/auto-mcp-tests.yml
+++ b/.github/workflows/auto-mcp-tests.yml
@@ -5,11 +5,15 @@ on:
     branches: [master]
     paths:
       - "internal/**"
+      - "go.mod"
+      - "go.sum"
       - ".github/workflows/auto-mcp-tests.yml"
   pull_request:
     branches: [master]
     paths:
       - "internal/**"
+      - "go.mod"
+      - "go.sum"
       - ".github/workflows/auto-mcp-tests.yml"
 
 env:
